--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,247 +1,35 @@
 /* -----------------------------------------------------------------------------
 * Global
-* ...
+* 67 : Navigation
+* 135 : Acceuil
+* 175: Présentation
+* 234: Galerie
+* 277 : Footer
+* 303 : Responsive
 ----------------------------------------------------------------------------- */
 
 /* Global
 ----------------------------------------------------------------------------- */
-html{
+html {
     scroll-behavior: smooth;
 }
 
 body {
     background: #ffffff;
     color: #000000;
-    font-family: 'Avenir';
+    font-family: 'Avenir', sans-serif;
     transition-duration: 0.5s;
 }
 
-/* Dans cette partie on va fixer la nav a gauche en haut, en y intégrant un menu hamburger qui servira sur le téléphone avec des barres qui s'alonge*/
-header{
-    
-    
-    width: 145px;
-    
-    
-    position:fixed;
-    right:10px;
-    top: 20px;
-    
-    position: fixed;
-    z-index: 9999;
-    
-    text-align: right;
-    
-}
-
-header #hamburger{
-    width:55px;
-    position:relative;
-    z-index: 99999;
-
-    padding:10px;
-    right:-45px;
-    top: 0px;
-    margin-bottom: 10px;
-    text-align: right;
-    
-   
-    
-}
-
-header #hamburger .hamburger-trait{
-    width:80%;
-    height: 2px;
-    
-    margin-bottom: 5px;
-    
-    background-color: dimgrey;
-    
-     transition-duration: 0.5s;
-
-    
-}
-
-
-
-/* Dans cette partie, on s'occupe de l'acceuil, de centrer le titre et la baseline */
-
-#acceuil{
-    width:100%;
-    height: 100vh;
-    background-color:whitesmoke;
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    text-align: center;
-}
-
-#acceuil h1{
-
-    
-    font-size: 80px;
- 
-    margin-bottom:20px;
-    
-    font-family: 'Futura-MediumItalic';
-    text-transform: 
-
-    
-}
-
-#acceuil h2{
-
-    
-    font-size: 25px;
- 
-    
-    font-family: 'Futura-Medium';
-    
-    text-transform: uppercase;
-}
-
-
-
-main section{
-    min-height:50vh;
-    display: flex;
-    flex-wrap: wrap;
-    
-
-    
-}
-
-main section aside img{
-    width:480px;
-    clip-path:polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
-}
-
-main section aside{
-    width : 50%;
-
-    display: flex;
-    
-    justify-content: center;
-    align-items: center;
-}
-
-main section aside h1{
-    font-size: 50px;
-    color: white;
-    font-family: 'Futura';
-    text-transform:uppercase;
-    
-    position:absolute;
-    
-    text-shadow: 2px 0px 4px  black;
-
-    
-}
-
-
-
-
-main section article{
-    width : 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-}
-
-main section article p{
-    width:500px;
-    background-color: whitesmoke;
-    padding:30px;
-    text-align: left;
-    line-height: 23px;
-    margin: 50px;
-}
-
-
-#galerie{
-    
-  display: grid;
-    text-align: center;
-}
-
-
-
-
-
-#grid_container{
-  display: grid;
-  grid-template-columns: auto auto auto auto ;
-  padding: 10px;
-  text-align: center;
-}
-
-.grid-item {
-  padding: 20px;
-    
-}
-
-#galerie #grid_container img{
-     width:290px;
-    transition-duration: 1s;  
-    /*clip-path:polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);*/
-}
-
-#galerie h1{
-    
-    font-size: 50px;
-    font-family: 'Futura';
-    text-transform:uppercase;
-    text-shadow: 2px 0px 4px  grey;
-  
-}
-
-footer{
-    display: flex;
-    justify-content: center;
-    background-color: whitesmoke;
-    height: 120px;
-    text-align: center;
-}
-
-footer p{
-    margin:10px;
-}
-
-nav a{
-    
-    font-family: 'Futura';
+a {
     color: black;
-    text-decoration: none;
-    text-transform:uppercase;
-    font-size:1em;
-    transition-duration: 0.5s;
-}
-
-.active{
-    font-size:1.3em;
-    
-}
-
-header #hamburger .active{
-    transition-duration: 0.5s;
-    width: 100%;
-}
-
-footer img{
-    margin:10px;
-}
-
-a{
-    color:black;
     text-decoration: none;
     font-weight: 500;
 }
 
-a:hover{
-    color:black;
+
+a:hover {
+    color: black;
     text-decoration: none;
     font-weight: 500;
     text-shadow: 1px 1px 15px grey;
@@ -249,7 +37,7 @@ a:hover{
 }
 
 a:link {
-   color:black;
+    color: black;
     text-decoration: none;
     font-weight: 500;
     text-shadow: 1px 1px 15px grey;
@@ -258,7 +46,7 @@ a:link {
 
 /* visited link */
 a:visited {
-   color:black;
+    color: black;
     text-decoration: none;
     font-weight: 500;
     text-shadow: 1px 1px 15px grey;
@@ -269,67 +57,295 @@ a:visited {
 
 /* selected link */
 a:active {
-   color:dark;
+    color: dark;
     text-decoration: none;
     font-weight: 500;
     text-shadow: 1px 1px 15px grey;
     transition-duration: 1s;
 }
 
+/* Navigation */
+nav {
 
-#galerie #grid_container img:hover{
-     transform: scale(1.3);
-     transition-duration: 1s;    
-    /*clip-path:polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);*/
+
+    width: 145px;
+
+
+    position: fixed;
+    right: 10px;
+    top: 20px;
+
+    position: fixed;
+    z-index: 9999;
+
+    text-align: right;
+
 }
 
-/* Ici on commence le reponsive */
+nav #hamburger {
+    width: 55px;
+    position: relative;
+    z-index: 99999;
+
+    padding: 10px;
+    right: -45px;
+    top: 0px;
+    margin-bottom: 10px;
+    text-align: right;
+
+
+
+}
+
+nav #hamburger .hamburger-trait {
+    width: 80%;
+    height: 2px;
+
+    margin-bottom: 5px;
+
+    background-color: dimgrey;
+
+    transition-duration: 0.5s;
+
+
+}
+
+nav a {
+
+    font-family: 'Futura';
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 1em;
+    transition-duration: 0.5s;
+}
+
+.active {
+    font-size: 1.3em;
+
+}
+
+nav #hamburger .active {
+    transition-duration: 0.5s;
+    width: 100%;
+}
+
+
+
+/* Acceuil */
+
+header {
+    width: 100%;
+    height: 100vh;
+    background-color: whitesmoke;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    text-align: center;
+}
+
+header h1 {
+
+
+    font-size: 70px;
+
+    margin-bottom: 20px;
+
+    font-family: 'Futura-MediumItalic', sans-serif;
+
+
+}
+
+header h2 {
+
+
+    font-size: 25px;
+
+
+    font-family: 'Futura-Medium';
+
+    text-transform: uppercase;
+}
+
+
+/* Présentation */
+
+main section article {
+    min-height: 50vh;
+    display: flex;
+    flex-wrap: wrap;
+
+
+
+}
+
+main section article div.image img {
+    width: 480px;
+    clip-path: polygon(5% 0%, 100% 0%, 95% 100%, 0% 100%);
+}
+
+main section article div.image {
+    width: 50%;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
+main section article div.image h1 {
+    font-size: 50px;
+    color: white;
+    font-family: 'Futura', sans-serif;
+    text-transform: uppercase;
+
+    position: absolute;
+
+    text-shadow: 2px 0px 4px black;
+
+
+}
+
+
+
+main section article div.texte,
+main section article div.image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+main section article div.texte p {
+    width: 500px;
+    background-color: whitesmoke;
+    padding: 30px;
+    text-align: left;
+    line-height: 23px;
+    margin: 50px;
+}
+
+
+/* Galerie */
+
+#galerie {
+
+    display: grid;
+    text-align: center;
+}
+
+
+
+
+
+#grid_container {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    padding: 10px;
+    text-align: center;
+}
+
+.grid-item {
+    padding: 20px;
+
+}
+
+#galerie #grid_container img {
+    width: 290px;
+    transition-duration: 1s;
+}
+
+#galerie h1 {
+
+    font-size: 50px;
+    font-family: 'Futura';
+    text-transform: uppercase;
+    text-shadow: 2px 0px 4px grey;
+
+}
+
+#galerie #grid_container img:hover {
+    transform: scale(1.3);
+    transition-duration: 1s;
+}
+
+/* footer */
+
+footer {
+    display: flex;
+    justify-content: center;
+    background-color: whitesmoke;
+    height: 120px;
+    text-align: center;
+}
+
+footer p {
+    margin: 10px;
+}
+
+
+footer img {
+    margin: 10px;
+}
+
+
+
+
+
+
+
+/* Responsive */
 
 @media only screen and (max-width: 1300px) {
 
-#grid_container{
-  grid-template-columns: auto auto auto ;
-}
+    #grid_container {
+        grid-template-columns: auto auto auto;
+    }
 
 
 }
 
 @media only screen and (max-width: 1000px) {
 
-    #grid_container{
-  grid-template-columns: auto auto;
-}
-    
-        
-    main section{
-    min-height:100px;
-    display: flex;
+    #grid_container {
+        grid-template-columns: auto auto;
+    }
 
-    
 
-    
-}
-    main section article{
-        width:100%;
+    main section article {
+        min-height: 100px;
+        display: flex;
+
+
+
+
+    }
+
+    main section article div.texte {
+        width: 100%;
         display: flex;
     }
-    
-    main section article p{
-        width:100%;
-        margin:20px;
-        padding:10px;
+
+    main section article div.texte p {
+        width: 100%;
+        margin: 20px;
+        padding: 10px;
     }
-    
-     main section aside{
-         height:300px;
-         width:100%;
-         margin: 10px 0px 10px 0px;
-         display: flex;
+
+    main section article div.image {
+        height: 300px;
+        width: 100%;
+        margin: 10px 0px 10px 0px;
+        display: flex;
 
 
     }
-    
-    #viepro{
+
+    #viepro {
         display: flex;
         flex-direction: column-reverse
     }
@@ -337,45 +353,42 @@ a:active {
 }
 
 
-      
+
 @media only screen and (max-width: 600px) {
-  body {
-    position:relative;
-  }
-    
-    #acceuil h1{
+
+
+    #acceuil h1 {
         font-size: 4em;
     }
-    
-     #acceuil h2{
+
+    #acceuil h2 {
         font-size: 1.5em;
     }
-    
-    header{
+
+    nav {
         position: fixed;
         z-index: 9999;
-        right:0px;
+        right: 0px;
     }
-    header nav{
-        margin-right:50px;
-        width:130px;
+
+    nav ul {
+        margin-right: 50px;
+        width: 130px;
         display: none;
     }
 
-    
-     main section article{
-        width:100%;
-        
+
+    main section article {
+        width: 100%;
+
     }
-    
-    
-        #grid_container{
-  grid-template-columns: auto;
-}
+
+
+    #grid_container {
+        grid-template-columns: auto;
+    }
 
 
 
-    
-}
-  
+
 }
